--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <link rel="stylesheet" href="/css/common.css" />
     <link rel="stylesheet" href="/css/main.css" />
 
     <!-- JavaScript -->
@@ -76,6 +77,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
+    <script defer src="/js/common.js"></script>
     <script defer src="/js/main.js"></script>
   </head>
   <body>
